--- a/app/globals.css
+++ b/app/globals.css
@@ -14,9 +14,14 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+  --background: #ffffff;
+  --foreground: #171717;
+}
+
+  /* :root {
     --background: #0a0a0a;
     --foreground: #ededed;
-  }
+  } */
 }
 
 body {
